# cli_option_parser

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml
cmake/: third-party.cmake
doc/source/: conf.py  index.rst
doc/source/usage/: building.rst
include/: cli_option_parser.h  cli_option_parser_export.h
src/: cli_option_parser.c
test/: CMakeLists.txt  test_cli_option_parser.c
